# Microlineage-AI

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruffignore  Dockerfile  Makefile  README.md  __init__.py  black.toml  conftest.py  mlflow.db  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  docker_publish.yml  policy_check.yml
_supporting/: app_start.py  drift_utils.py  generate_data_contract_md.py  policy.yaml  pyproject.toml  requirements-min.txt  schema_contract.py
_supporting/.github/workflows/: ci.yml
_supporting/ci/: policy_check.py
_supporting/config/: backtest.yml
_supporting/dashboard/: app_prototype.py  forecast_dashboard.py
_supporting/dashboards/: forecast_dashboard.py
_supporting/data/: make_sku_forecast.py
_supporting/data/samples/: pos.csv  sku_ref.csv  weather.csv
_supporting/governance/: policy_gate.yaml
_supporting/models/: optimize_prices.py
_supporting/reports/: data_freshness.json  health_metrics.json  sanity_check.py
_supporting/schemas/: pos.py  ref.py  weather.py
_supporting/src/api/: app.py
_supporting/src/data/: validate.py
_supporting/src/eval/: backtest.py
_supporting/src/models/baselines/: naive.py  seasonal_naive.py
_supporting/src/monitoring/: gates.py
_supporting/tests/: test_schemas.py
_supporting/tools/: gen_samples.py
dashboard/: app.py
docs/: data_contract_retail.md
microlineage/: schemas.py
mlruns/1/d009f209df1e4f39a975d64673c09603/artifacts/artifacts/: sku_optimized.csv
src/api/: app.py
tests/: test_optimizer.py
