[project]
name = "microlineage-ai"
version = "0.1.0"
description = "Economy 4.0 micro-market forecasting & optimization with DriftOps-style governance"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "prophet>=1.1 ; platform_system != 'Windows'",  # optional
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "plotly>=5.20",
  "streamlit>=1.35",
  "pyomo>=6.6",
  "shap>=0.45",
  "fairlearn>=0.10",
  "scipy>=1.11",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "requests>=2.31"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
