[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microlineage-ai"
version = "0.1.0"
description = "MicroLineage-AI supporting package"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.24",
  "plotly>=5.20",
  "streamlit>=1.35",
  "pyomo>=6.6",
  "shap>=0.45",
  "fairlearn>=0.10",
  "scipy>=1.11",
  "python-dotenv>=1.0",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["ruff","black","pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
